--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="team.html"><button>Team</button></a>
         <a href="city.html"><button>Our City</button></a>
         <a href="learn.html"><button>Course Learning Reflections</button></a>
-        <a href="cases.html"><button>Business Cases</button></a>
+        <a href="cases.html"><button>Cases</button></a>
         <a href="final.html"><button>Final Code</button></button></a>
     </nav>
 
