--- a/code4.html
+++ b/code4.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>4: </h1>
+  <h1>case 4: </h1>
   <pre><code>
 #include <iostream>
 #include <vector>
@@ -108,7 +108,7 @@ int main() {
 
   </code></pre>
 
-  <h1>6:</h1>
+  <h1>case 6:</h1>
   <pre><code>
 #include <iostream>
 #include <vector>
