--- a/chandana.html
+++ b/chandana.html
@@ -15,19 +15,19 @@
 
     <main>
         <section id="introduction">
-            <h2>Develop Financing and Funding Models</h2>
-             <h2>SDG 17: Partnerships for the Goals:</h2>
-            <p> Building affordable housing often requires funding from multiple sources, including government, private investors, and international organizations. Creating innovative financing models and public-private partnerships allows different stakeholders to pool resources and expertise to fund large-scale housing projects that can meet the needs of the population.</p>
+            <h2>Utility Network Planning </h2>
+             <h2>SDG 9: Industry, Innovation, and Infrastructur :</h2>
+            <p> Efficiently connecting critical infrastructure nodes through optimized networks aligns with SDG 9 by promoting resilient infrastructure and fostering sustainable development.</p>
              
         </section>
 
         
  <section id="housing">
-            <h2>Ensure Long-Term Affordability and Community Sustainability</h2>
-           <h2>SDG 1: No Poverty</h2>
-            <p>Housing affordability is crucial for long-term poverty prevention. If housing prices rise too rapidly or are not maintained as affordable over time, families may face economic hardship. Maintaining long-term affordability ensures that families continue to have access to safe, secure housing without falling back into poverty.</p>
-             <h2>SDG 11: Sustainable Cities and Communities:</h2>
-            <p> Sustainable Cities and Communities – Long-term sustainability means creating vibrant, resilient communities that can thrive over time. This involves ongoing support for residents, ensuring that neighborhoods remain inclusive, safe, and vibrant. Community sustainability could include initiatives like local job creation, social programs, and maintenance of public spaces that foster a strong community identity.</p>   
+            <h2>Resource Prioritization List of emergencies with priorities.</h2>
+           <h2>SDG 11 - Sustainable Cities and Communities</h2>
+            <p>Dynamic resource prioritization based on emergency severity aligns with SDG 11 by ensuring resilient and inclusive urban management during critical situations..</p>
+             <h2>SDG 3 - Good Health and Well-being</h2>
+            <p> Adaptive prioritization of emergencies supports SDG 3 by ensuring timely and effective responses to safeguard health and well-being during crises..</p>   
         </section>
 
        <nav>
