--- a/ishwari.html
+++ b/ishwari.html
@@ -15,18 +15,18 @@
 
     <main>
         <section id="introduction">
-            <h2>Design Affordable and Sustainable Housing Models</h2>
-             <h2>SDG 11: Sustainable Cities and Communities:</h2>
-            <p> The goal here is to design housing that minimizes environmental impact, uses sustainable materials, and is energy-efficient. By focusing on sustainable construction methods, we can contribute to the creation of cities and communities that are not only livable but also environmentally friendly and resilient</p>
-             <h2>SDG 12: Responsible Consumption and Production:</h2>
-            <p>This goal focuses on reducing waste, promoting the reuse of materials, and designing homes with lower environmental footprints. For housing, this means using resources responsibly in construction (e.g., low-energy building materials, renewable energy systems) to reduce overall consumption and waste.</p>   
+            <h2>Shortest Path</h2>
+             <h2>SDG 9 - Industry, Innovation, and Infrastructure:</h2>
+            <p> Optimizing emergency routes using the shortest path algorithm enhances infrastructure efficiency, contributing to SDG 9 by promoting resilient and innovative urban services.</p>
+             <h2>:</h2>
+            <p>Using shortest path algorithms for emergency routes ensures quick access to healthcare facilities, aligning with SDG 3 by promoting timely medical response and well-being..</p>   
         </section>
 
         
  <section id="housing">
-            <h2>Construct Housing Units</h2>
-           <h2>SDG 8: Decent Work and Economic Growth:</h2>
-            <p>The construction of housing creates jobs across various sectors, from labor to supply chain management, architecture, and engineering. By ensuring that these jobs meet decent labor standards, we help promote economic growth and improve livelihoods in the construction sector.</p>
+            <h2>Resource Prioritization List of emergencies with priorities.</h2>
+           <h2>SDG 16 - Peace, Justice, and Strong Institutions</h2>
+            <p>Adjusting priority levels in high-pressure emergencies ensures that institutions can respond effectively, maintaining order and justice in crisis situations, supporting SDG 16..</p>
              <h2>SDG 11: Sustainable Cities and Communities:</h2>
             <p> The act of building housing itself is critical in the development of well-functioning and inclusive cities. It ensures that there is sufficient housing for growing urban populations, and it can be done sustainably to create resilient, future-proof communities.</p>   
         </section>
