--- a/city.html
+++ b/city.html
@@ -3,14 +3,14 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marina Bay</title>
+    <title>ECOVILLE</title>
     <link rel="stylesheet" href="city.css">
 
 </head>
 <body>
   <header>
-  <h1>Marina Bay</h1>
-  <p> "Marina Bay" a proposed city in Pondicherry envisions a futuristic city built upon the principles of sustainability, innovation, and citizen-centric design. Inspired by the concept of smart cities, Marina Bay aims to leverage technology to enhance the quality of life for its residents while minimizing environmental impact.</p>
+  <h1>ECOVILLE</h1>
+  <p> "ECOVILLE" a proposed city in Pondicherry envisions a futuristic city built upon the principles of sustainability, innovation, and citizen-centric design. Inspired by the concept of smart cities,ECOVILLE aims to leverage technology to enhance the quality of life for its residents while minimizing environmental impact.</p>
    </header>
 
    <main>
@@ -27,7 +27,7 @@
   <h3>Maps</h3>
   <ul>
     <li><strong>Fig a)</strong> City Design 
-      <img src="image.jpg.png" alt="Map with major points and landmarks"> </li> 
+      <img src="city.jpg.png" alt="Map with major points and landmarks"> </li> 
   </ul>
  </section>
       
