--- a/city.html
+++ b/city.html
@@ -27,7 +27,7 @@
   <h3>Maps</h3>
   <ul>
     <li><strong>Fig a)</strong> City Design 
-      <img src="city.jpg.png" alt="Map with major points and landmarks"> </li> 
+      <img src="city.jpg" alt="Map with major points and landmarks"> </li> 
   </ul>
  </section>
       
