--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         
         <section id="course-project">
             <h2>Course Project Introduction</h2>
+            <h2>Rapid response protocol</h2>
             <p>Our project focuses on addressing <strong>Develop sustainable and affordable housing solutions to address the housing shortage in urban</strong>. This problem was identified through extensive analysis and brainstorming sessions, followed by research insights derived from white papers.</p>
             <p>The project examines city design, infrastructure challenges, and associated business cases, identifying specific opportunities for improvement and innovation.</p>
 
