--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         
         <section id="course-project">
             <h2>Course Project Introduction</h2>
-            <h2>Rapid response protocol</h2>
-            <p>Our project focuses on addressing <strong>Develop sustainable and affordable housing solutions to address the housing shortage in urban</strong>. This problem was identified through extensive analysis and brainstorming sessions, followed by research insights derived from white papers.</p>
-            <p>The project examines city design, infrastructure challenges, and associated business cases, identifying specific opportunities for improvement and innovation.</p>
+            <h2>Rapid Response PProtocol</h2>
+            <p>Our project focuses on addressing <strong>Develop sustainable and affordable  solutions ,Emergency response planning is an essential component of disaster management and public safety. In rapidly urbanizing regions, the complexity of handling emergencies such as natural disasters, medical crises, or large-scale accidents increases exponentially. This project leverages advanced computational techniques to automate and optimize critical aspects of emergency response, such as shortest path routing, resource prioritization, and infrastructure connectivity.The domain of this project lies at the intersection of graph theory, data structures, and algorithmic problem-solving, applied to real-world scenarios. A white paper on “Optimizing Urban Emergency Systems Using Computational Models” [1] served as the foundational inspiration. It highlighted inefficiencies such as delayed response times, suboptimal resource allocation, and lack of connectivity between critical points like hospitals and fire stations. These challenges, if addressed effectively, could save lives and mitigate the economic and societal impacts of emergencies..</p>
+            <p>The project examines city design, challenges, and associated cases, identifying specific opportunities for improvement and innovation.</p>
 
         
         </section>
