--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@
                         <dd>01FE23BCS074</dd>
 
                         <dt>Course Instructor</dt>
-                        <dd>K M M R </dd>
+                        <dd>Mallikarjun Akki </dd>
 
                         <dt>University</dt>
                         <dd>KLE Technological Un-</dd>
@@ -114,7 +114,7 @@
                         <dd>01FE23BCS093/dd>
 
                         <dt>Course Instructor</dt>
-                        <dd>K M M R</dd>
+                        <dd>Mallikarjun Akki</dd>
 
                         <dt>University</dt>
                         <dd>KLE Technogical University</dd>
@@ -167,7 +167,7 @@
                         <dd>01FE23BCS005</dd>
 
                         <dt>Course Instructor</dt>
-                        <dd>K M M R</dd>
+                        <dd>Mallikarjun Akki</dd>
 
                         <dt>University</dt>
                         <dd>KLE Tecahnogical University</dd>
@@ -221,7 +221,7 @@
                         <dd>01FE24BCS235</dd>
 
                         <dt>Course Instructor</dt>
-                        <dd>K M M R</dd>
+                        <dd>Mallikarjun Akki</dd>
 
                         <dt>University</dt>
                         <dd>KLE Technogical University</dd>
