--- a/team.html
+++ b/team.html
@@ -44,13 +44,13 @@
 
                     <h2>🌐 Find Me Online</h2>
                     <ul>
-                        <li><a href="https://github.com/Swathi10bvb2004" target="_blank">GitHub</a></li>
+                        <li><a href="https://sites.google.com/kletech.ac.in/daa133/home" target="_blank">Portfolio</a></li>
                     </ul>
 
                     <h2>Portfolio Topic</h2>
                     <dl>
                         <dt>Course Name</dt>
-                        <dd>Algorithmic Problem Solving</dd>
+                        <dd>Design and Analysis of Algorithms</dd>
 
                         <dt>Course Code</dt>
                         <dd>24ECSC205</dd>
@@ -102,7 +102,7 @@
                     <h2>Portfolio Topic</h2>
                     <dl>
                         <dt>Course Name</dt>
-                        <dd>Algorithmic Problem Solving</dd>
+                        <dd>Design and Analysis of Algorithms</dd>
 
                         <dt>Course Code</dt>
                         <dd>24ECSC205</dd>
@@ -148,14 +148,14 @@
 
                     <h2>🌐 Find Me Online</h2>
                     <ul>
-                        <li><a href="https://github.com/01fe23bci086" target="_blank">GitHub</a></li>
-                        <li><a href="https://in.linkedin.com/in/vaishnavi-tiwari-541079296" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://sites.google.com/kletech.ac.in/daa-assignment/home">Portfolio</a></li>
+                        
                     </ul>
 
                     <h2>Portfolio Topic</h2>
                     <dl>
                         <dt>Course Name</dt>
-                        <dd>Algorithmic Problem Solving</dd>
+                        <dd>Design and Analysis of Algorithms</dd>
 
                         <dt>Course Code</dt>
                         <dd>24ECSC205</dd>
@@ -201,7 +201,7 @@
 
                     <h2>🌐 Find Me Online</h2>
                     <ul>
-                        <li><a href="https://github.com/Sanjanas2304" target="_blank">GitHub</a></li>
+                        <li><a href="https://sites.google.com/kletech.ac.in/daaportpholioadiv150/learning-outcome" target="_blank">Portfolio</a></li>
                       
                         </li>
                     </ul>
@@ -209,7 +209,7 @@
                     <h2>Portfolio Topic</h2>
                     <dl>
                         <dt>Course Name</dt>
-                        <dd>Algorithmic Problem Solving</dd>
+                        <dd>Design and Analysis of Algorithms</dd>
 
                         <dt>Course Code</dt>
                         <dd>24ECSC205</dd>
